--- a/index.html
+++ b/index.html
@@ -2,7 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/img/favicon.ico" />
+    <!-- Favicon básico -->
+<link rel="icon" href="/favicon.ico" sizes="any">
+
+<!-- SVG (navegadores modernos) -->
+<link rel="icon" href="/favicon.svg" type="image/svg+xml">
+
+<!-- Apple Touch -->
+<link rel="apple-touch-icon" href="/apple-touch-icon.png">
+
+<!-- Manifest (PWA-ready, mesmo que você não use agora) -->
+<link rel="manifest" href="/site.webmanifest">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CentralSys</title>
   </head>
